Fix studio di fattibilita

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/DescrizioneGenerale/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/DescrizioneGenerale/main.tex
@@ -7,4 +7,4 @@ Il sistema \emph{BlockCovid} offir\`{a} le seguenti funzionalit\`{a}:
 
 \subsection{Vincoli}
 Per progettare la soluzione è stato previsto, come assunto di base non derogabile, il fatto che le persone
-da tracciare ed i dipendenti dell’azienda specializzata siano in possesso di uno smartphone (Android o iOS) e nelle condizioni di installare un’applicazione.
+da tracciare ed i dipendenti dell’azienda specializzata siano in possesso di uno smartphone (\glo{Android} o \glo{iOS}) e nelle condizioni di installare un’applicazione.
