--- a/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
@@ -34,7 +34,7 @@ dall'utente.}
 \DefinizioneGlossario{Una applicazione distribuita web-based cioè fruibile via web per mezzo di un network, come Internet, che offre determinati servizi all'utente che la utilizza. Le applicazioni web a differenza delle altre applicazioni non necessitano di venire installate.}
 
 \TermineGlossario{AppSync}
-\DefinizioneGlossario{AWS AppSync è un servizio completamente gestito che facilita lo sviluppo di API GraphQL gestendo le attività impegnative derivanti dalla connessione sicura a origini dati come AWS DynamoDB, Lambda e altro}
+\DefinizioneGlossario{AWS AppSync è un servizio completamente gestito che facilita lo sviluppo di API GraphQL gestendo le attività impegnative derivanti dalla connessione sicura a origini dati come \glo{AWS DynamoDB}, Lambda e altro}
 
 \TermineGlossario{Asincrona}
 \DefinizioneGlossario{Sono generiche attività che proseguono indisturbate ed il chiamante non deve attendere la fine dell'attività del codice richiamato.}
