--- a/DocumentiEsterni/Glossario/src/Alfabeto/B.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/B.tex
@@ -1,10 +1,10 @@
 \section{B}
 
 \TermineGlossario{Backend as a service (BAAS)}
-\DefinizioneGlossario{È un modello per fornire agli sviluppatori di applicazioni web o mobile un modo per collegare le loro applicazioni a un backend cloud storage e API, esposte da applicazioni backend, fornendo allo stesso tempo funzioni quali la gestione degli utenti, le notifiche push, e l'integrazione con servizi di rete sociale.}
+\DefinizioneGlossario{È un modello per fornire agli sviluppatori di applicazioni web o mobile un modo per collegare le loro applicazioni a un \glo{backend} cloud storage e API, esposte da applicazioni \glo{backend}, fornendo allo stesso tempo funzioni quali la gestione degli utenti, le notifiche push, e l'integrazione con servizi di rete sociale.}
 
 \TermineGlossario{Backend (server)}
-\DefinizioneGlossario{Sono delle interfacce che hanno come destinatario un programma. Una applicazione back end è un programma con il quale l'utente interagisce indirettamente. In una struttura client/server il back end è il server.}
+\DefinizioneGlossario{Sono delle interfacce che hanno come destinatario un programma. Una applicazione \glo{backend} è un programma con il quale l'utente interagisce indirettamente. In una struttura client/server il \glo{backend} è il server.}
 
 \TermineGlossario{Baseline}
 \DefinizioneGlossario{È un insieme di configuration item in un dato istante temporale (milestone), verificato, base per l'avanzamento del progetto.}
