--- a/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
@@ -28,7 +28,7 @@
 \DefinizioneGlossario{È un sistema di analisi e monitoraggio open source per basi di dati e funziona come un'applicazione web.}
 
 \TermineGlossario{Gradle} 
-\DefinizioneGlossario{È un sistema open source di compilazione che viene utilizzato per la automate building, i testing, le distribuizioni, ecc. Ogni progetto Android ha 
+\DefinizioneGlossario{È un sistema open source di compilazione che viene utilizzato per la automate building, i testing, le distribuizioni, ecc. Ogni progetto \glo{Android} ha 
 bisogno di un Gradle per generare un apk dai file .java e .xml .}
 
 \TermineGlossario{GUI (Graphical User Interface, Interfaccia grafica)}
