--- a/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
@@ -12,6 +12,6 @@
 \DefinizioneGlossario{L'atto nella quale è avvenuta con successo il collegamento RFID tra il dispositivo mobile munito dell'applicazione del dipendente e il dispositivo reader dell' azienda. Questa funzione permette di tracciare gli utenti all'interno dell'area dell'azienda in modo più preciso }
 
 \TermineGlossario{TypeScript} 
-\DefinizioneGlossario{È un linguaggio di programmazione open source che estende la sintassi di JavaScript in modo che qualunque programma scritto in JavaScript sia anche in grado di funzionare 
+\DefinizioneGlossario{È un linguaggio di programmazione open source che estende la sintassi di \glo{JavaScript} in modo che qualunque programma scritto in \glo{JavaScript} sia anche in grado di funzionare 
 con TypeScript senza nessuna modifica.}
 \clearpage
