--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -3,8 +3,8 @@
 \newcommand{\Prodotto}{TODO}
 
 \newcommand{\Approvatore}{Elvis Murtezan}
-\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton \\}
-\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto\\}
+\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton }
+\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
