--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -1,5 +1,5 @@
 
-\subsection{Infomazioni generali}
+\subsection{Informazioni generali}
 Il capitolato in questione si chiama "BlockCOVID: supporto digitale al contrasto della pandemia", il proponente è l'azienda Imola Informatica ed i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 
 \subsection{Descrizione del capitolato}
@@ -17,7 +17,7 @@ Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo d
 \subsection{Tecnologie coinvolte}
 \begin{itemize}
 \item \glo{RFID}: tecnologia a radiofrequenza per l'identificazione o trasmissione di informazioni;
-\item \glo{Java}, \glo{Python} o \glo{Node.js} per lo sviluppo del server back-end;
+\item \glo{Java}, \glo{Python} o \glo{Node.js} per lo sviluppo del server \glo{backend};
 \item protocolli asincroni per le comunicazioni app mobile-server;
 \item sistema \glo{Blockchain} per salvare con opponibilità a terzi i dati di sanificazione;
 \item piattaforme \glo{IAAS} o \glo{PAAS}, come \glo{Kubernetes}, \glo{Openshift} o \glo{Rancher}, per il rilascio delle componenti del server e la gestione della scalabilità orizzontale;
