--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -1,5 +1,5 @@
 
-\subsection{Infomazioni generali}
+\subsection{Informazioni generali}
 Il capitolato in questione si chiama "HD Viz: visualizzazione di dati multidimensionali", il proponente è l'azienda Zucchetti ed i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 
 \subsection{Descrizione del capitolato}
@@ -15,8 +15,8 @@ L’azienda proponente è particolarmente interessata a verificare la fattibilit
 
 \subsection{Tecnologie coinvolte}
 \begin{itemize}
-\item \glo{D3.js}: libreria javascript per creare visualizzazioni dinamiche ed interattive partendo da dati organizzati;
-\item \glo{Node.js} oppure \glo{Apache Tomcat}: sviluppo del server \glo{back-end};
+\item \glo{D3.js}: libreria \glo{javascript} per creare visualizzazioni dinamiche ed interattive partendo da dati organizzati;
+\item \glo{Node.js} oppure \glo{Apache Tomcat}: sviluppo del server \glo{backend};
 \item \glo{Javascript}: linguaggio di scripting utilizzato per svolgere i diversi compiti ed eventi;
 \item \glo{HTML}: linguaggio di markup per la realizzazione e strutturazione dei siti web;
 \item \glo{CSS}: linguaggio per la formattazione e layout dei documenti web;
