--- a/DocumentiInterni/StudioDiFattibilita/src/C7/src/Aspetti_critici.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/src/Aspetti_critici.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-\item Nel progetto sono presenti temi già ampiamente studiati nel corso di studi universitario, per cui non si amplierebbe il bagaglio di tecnologie conosciute;
-\item L'interesse da parte del gruppo di lavoro per questo capitolato si è dimostrato molto basso.
+\item nel progetto sono presenti temi già ampiamente studiati nel corso di studi universitario, per cui non si amplierebbe il bagaglio di tecnologie conosciute;
+\item l'interesse da parte del gruppo di lavoro per questo capitolato si è dimostrato molto basso.
 
 \end{itemize}
