--- a/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
@@ -14,6 +14,6 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Questo documento ha lo scopo di presentare le analisi svolte sui capitolati d'appalto disponibili}
+\newcommand{\DescrizioneDoc}{Questo documento ha lo scopo di presentare le analisi svolte sui capitolati d'appalto disponibili.}
 
 \newcommand{\Glossariov}{Glossario \Versionedoc}
