--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -91,19 +91,19 @@
 \newcommand{\Gruppo}{Sweleven}
 
 % variabili - documenti
-\newcommand{\VersioneDiConsegna}{4.0.0-R1}
-\newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
+\newcommand{\VersioneDiConsegna}{v1.0.0}
+\newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.1.0.0}}
 \newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
-\newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
-\newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
-\newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
-\newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
-\newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
-\newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
-\newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
-\newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
-\newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
-\newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
+\newcommand{\VIv}{\emph{Verbale interno\_v.1.0.0}}
+\newcommand{\NdPv}{\emph{Norme di progetto\_v.1.0.0}}
+\newcommand{\PdPv}{\emph{Piano di progetto\_v.1.0.0}}
+\newcommand{\PdQv}{\emph{Piano di qualifica\_v.1.0.0}}
+\newcommand{\SPv}{\emph{Specifica tecnica\_v.1.0.0}}
+\newcommand{\DdPv}{\emph{Definizione di prodotto\_v.1.0.0}}
+\newcommand{\Gv}{\emph{Glossario\_v.1.0.0}}
+\newcommand{\MUv}{\emph{Manuale utente\_v.1.0.0}}
+\newcommand{\MSv}{\emph{Manuale sviluppatore\_v.1.0.0}}
+\newcommand{\VEv}{\emph{Verbale esterno\_v.1.0.0}}
 
 \newcommand{\AdR}{\emph{Analisi dei requisiti}}
 \newcommand{\SdF}{\emph{Studio di fattibilit\`{a}}}
@@ -127,7 +127,7 @@
 % variabili - altro
 
 \newcommand{\Mail}{swegroup11@gmail.com}
-\newcommand{\proponente}{Imola Informatica}
+\newcommand{\proponente}{Imola Informatica s.p.a}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
