--- a/DocumentiEsterni/Glossario/src/Alfabeto/J.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/J.tex
@@ -4,7 +4,7 @@
 \DefinizioneGlossario{È un linguaggio di scripting orientato agli oggetti e agli eventi, comunemente utilizzato nella programmazione Web lato client, per la creazione, in siti web e applicazioni web, di effetti dinamici interattivi tramite funzioni di script invocate da eventi innescati a loro volta in vari modi dall'utente sulla pagina web in uso.}
 
 \TermineGlossario{JavaScript Object Notation (JSON)}
-\DefinizioneGlossario{È un formato adatto all'interscambio di dati fra applicazioni client/server ed è basato sul linguaggio JavaScript, ma ne è indipendente.}
+\DefinizioneGlossario{È un formato adatto all'interscambio di dati fra applicazioni client/server ed è basato sul linguaggio \glo{JavaScript}, ma ne è indipendente.}
 
 \TermineGlossario{Jira}
 \DefinizioneGlossario{È una suite di software online proprietari per il tracciamento delle segnalazioni sviluppato da Atlassian, che consente il bug tracking e la gestione dei progetti agile.}
