--- a/DocumentiEsterni/Glossario/src/Alfabeto/N.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/N.tex
@@ -3,14 +3,14 @@
 \DefinizioneGlossario{L'elaborazione del linguaggio naturale è il processo di trattamento automatico mediante un calcolatore elettronico delle informazioni scritte o parlate in una lingua naturale.}
 
 \TermineGlossario{npm (Node Package Manager)}
-\DefinizioneGlossario{È un gestore di pacchetti per il linguaggio di programmazione JavaScript. È il gestore di pacchetti predefinito per l'ambiente di runtime JavaScript Node.js. 
+\DefinizioneGlossario{È un gestore di pacchetti per il linguaggio di programmazione \glo{JavaScript}. È il gestore di pacchetti predefinito per l'ambiente di runtime \glo{JavaScript} Node.js. 
 Consiste in un client da linea di comando, chiamato anch'esso npm e un database online di pacchetti pubblici e privati, chiamato npm registry.}
 
 \TermineGlossario{NFC(near-field communication}
 \DefinizioneGlossario{è una tecnologia di ricetrasmissione che fornisce connettività senza fili (RF) bidirezionale a distanza (contactless) a corto raggio (fino a un massimo di 10 cm), sviluppata congiuntamente da Philips, LG, Sony, Samsung e Nokia.La tecnologia NFC si è evoluta da una combinazione d'identificazione senza contatto o RFID e altre tecnologie di connettività. Contrariamente ai più semplici dispositivi RFID, NFC permette una comunicazione bidirezionale}
 
 \TermineGlossario{Node.js}
-\DefinizioneGlossario{È una runtime di JavaScript open source multipiattaforma orientato agli eventi (rende possibile l’I/O asincrono) per l'esecuzione di codice JavaScript.}
+\DefinizioneGlossario{È una runtime di \glo{JavaScript} open source multipiattaforma orientato agli eventi (rende possibile l’I/O \glo{asincrono}) per l'esecuzione di codice \glo{JavaScript}.}
 
 \TermineGlossario{NoSQL}
 \DefinizioneGlossario{È un movimento che promuove sistemi software dove la persistenza dei dati è in generale caratterizzata dal fatto di non utilizzare il modello relazionale.}
