--- a/DocumentiEsterni/Glossario/src/Alfabeto/R.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/R.tex
@@ -3,7 +3,7 @@
 \DefinizioneGlossario{È una piattaforma di gestione per container Docker. Include una distribuzione Kubernetes e l'opzione tra Docker Swarm e Apache Mesos. Tutti utilizzano Docker come runtime del contenitore sottostante e coordinano i contenitori in esecuzione tra più nodi fisici discreti. Rancher include anche servizi di infrastruttura modulare tra cui networking, bilanciamento del carico, rilevamento di servizi, monitoraggio e ripristino.}
 
 \TermineGlossario{React}
-\DefinizioneGlossario{È una libreria open source di JavaScript per creare interfacce utente (UI).}
+\DefinizioneGlossario{È una libreria open source di \glo{JavaScript} per creare interfacce utente (UI).}
 
 \TermineGlossario{Redis}
 \DefinizioneGlossario{È un archivio di strutture di dati in memoria open source, utilizzato come database, cache e broker di messaggi. Supporta strutture di dati come stringhe, hash, elenchi, set, 
