--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Aspetti_positivi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Aspetti_positivi.tex
@@ -1,4 +1,4 @@
 \begin{itemize}
-\item possibilità di imparare nuovi linguaggi di programmazione come  Typescript;
+\item possibilità di imparare nuovi linguaggi di programmazione come \glo{Typescript};
 \item possibilità di imparare ad utilizzare servizi cloud come Amazon Web Services;
 \end{itemize}
