--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Criticita_e_fattori_di_rischio.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Criticita_e_fattori_di_rischio.tex
@@ -1,6 +1,6 @@
 \begin{itemize}
 
-\item L'azienda proponente ha sede all'estero, quindi la comunicazione con i referenti sarà meno agevole rispetto ai rapporti con un'azienda che ha sede nel territorio nazionale;
-\item Il capitolato prevede l'utilizzo di tecnologie nuove, che quindi porteranno ad una mole di studio autonomo non indifferente.
+\item l'azienda proponente ha sede all'estero, quindi la comunicazione con i referenti sarà meno agevole rispetto ai rapporti con un'azienda che ha sede nel territorio nazionale;
+\item il capitolato prevede l'utilizzo di tecnologie nuove, che quindi porteranno ad una mole di studio autonomo non indifferente.
 
 \end{itemize}
