--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Tecnologie_coinvolte.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Tecnologie_coinvolte.tex
@@ -1,11 +1,11 @@
 \begin{itemize}
-\item {\bf Amazon Web Services(AWS):} insieme di servizi di cloud computing utili per il progetto tra cui:
+\item \glo{Amazon Web Services(AWS):} insieme di servizi di cloud computing utili per il progetto tra cui:
 \begin{enumerate}
-\item {\bf Lambda:} AWS Lambda consente di eseguire codice senza dover effettuare il provisioning né gestire server. I prezzi sono calcolati in base al tempo effettivo di elaborazione;
-\item {\bf API gateway:} servizio API per la comunicazione con Lambda;
-\item {\bf DynamoDB:} database che supporta i modelli di dati di tipo documento e di tipo chiave-valore che offre tempi di risposta di pochi millisecondi a qualsiasi scala;
-\item {\bf CloudWatch:} servizio di monitoraggio e osservabilità creato per ingegneri, sviluppatori, responsabili dell'affidabilità del sito (SRE) e manager IT DevOps;
+\item \glo{Lambda:} AWS Lambda consente di eseguire codice senza dover effettuare il provisioning né gestire server. I prezzi sono calcolati in base al tempo effettivo di elaborazione;
+\item \glo{API gateway:} servizio API per la comunicazione con Lambda;
+\item \glo{DynamoDB:} database che supporta i modelli di dati di tipo documento e di tipo chiave-valore che offre tempi di risposta di pochi millisecondi a qualsiasi scala;
+\item \glo{CloudWatch:} servizio di monitoraggio e osservabilità creato per ingegneri, sviluppatori, responsabili dell'affidabilità del sito (SRE) e manager IT DevOps;
 \end{enumerate}
-\item {\bf NodeJs:} piattaforma open source per l'esecuzione di codice JavaScript (TypeScript) server-side;
-\item {\bf Next.js:} framework web di sviluppo front-end React open source che abilita funzionalità come il rendering lato server e la generazione di siti web statici per applicazioni web basate su React. 
+\item \glo{NodeJs:} piattaforma open source per l'esecuzione di codice \glo{JavaScript} (\glo{TypeScript}) server-side;
+\item \glo{Next.js}: framework web di sviluppo front-end React open source che abilita funzionalità come il rendering lato server e la generazione di siti web statici per applicazioni web basate su React. 
 \end{itemize}
