--- a/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
@@ -7,39 +7,39 @@ Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e 
 \subsection{Prerequisiti}
 \begin{itemize}
     \item competenze nell'elaborazione di big data;
-    \item competenze nello sviluppo di back-end e front-end di applicativi web;
+    \item competenze nello sviluppo di \glo{backend} e front-end di applicativi web;
     \item conoscenze sul funzionamenteo dei protocolli asincroni.
 \end{itemize}
 \subsection{Tecnologie coinvolte}
 \begin{itemize}
-    \item \glo{Java} e \glo{TypeScript}: usati per lo sviluppo di back-end e front-end della Web Application;
+    \item \glo{Java} e \glo{TypeScript}: usati per lo sviluppo di \glo{backend} e front-end della Web Application;
     \item \glo{Javascript}: usato per la gestione delle mappe;
     \item \glo{MQTT}: protocollo usato per lo scambio di messaggi.
 
 \end{itemize}
 \subsection{Vincoli}
 \begin{itemize}
-    \item Le tecnologie di cui sopra;
-    \item Il servizio deve essere:
+    \item le tecnologie di cui sopra;
+    \item il servizio deve essere:
     \begin{itemize}
         \item disponibile in caso di un guasto;
         \item ripristinabile velocemente;
-        \item scalabile.
+        \item scalabile;
     \end{itemize}
-    \item Il server, completo di UI, deve rappresentare i flussi:
+    \item il server, completo di UI, deve rappresentare i flussi:
     \begin{itemize}
         \item in tempo reale con bassa latenza;
         \item previsti per un intervallo di tempo futuro;
-        \item raccolti e storicizzati.
+        \item raccolti e storicizzati;
     \end{itemize}
-    \item Test:
+    \item test:
     \begin{itemize}
         \item devono essere presenti test unitari ed d'integrazione;
         \item devono coprire almeno l'80\% del codice;
         \item il sistema deve essere testato tramite test end-to-end;
-        \item devono essere correlati di report.
+        \item devono essere correlati di report;
     \end{itemize}
-    \item Documentazione su problemi aperti con eventuali soluzioni proposte, scelte implementative e progettuali.
+    \item documentazione su problemi aperti con eventuali soluzioni proposte, scelte implementative e progettuali.
 \end{itemize}
 \subsection{Aspetti positivi}
 \begin{itemize}
@@ -56,4 +56,4 @@ Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e 
 Il capitolato lascia molta libertà di implementazione, guidando per\`{o} gli studenti con suggerimenti sulle tecnologie da utilizzare.
 Non presenta vincoli stringenti, gli unici richiesti sono "di base" per fornire un software usabile.
 Sebbene inizialmente non avesse suscitato molto interesse, è stato scelto come terza preferenza per la possibilità di arricchimento delle competenze personali
-riguardanti l'analisi di dati e sviluppo di interfacce web sia front che back-end.
+riguardanti l'analisi di dati e sviluppo di interfacce web sia front che \glo{backend}.
