--- a/DocumentiInterni/StudioDiFattibilita/src/C7/src/Tecnologie_coinvolte.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/src/Tecnologie_coinvolte.tex
@@ -1,6 +1,6 @@
 \begin{itemize}
-\item {\bf Qt:} framework consigliato per lo sviluppo
+\item \glo{Qt:} framework consigliato per lo sviluppo
 dell'interfaccia e del controller d’architettura;
-\item {\bf Python:} Linguaggio consigliato per lo sviluppo della Business Logic;
-\item {\bf GraphQL:} linguaggio di interrogazione lato server per interfacce di programmazione delle applicazioni (API);
+\item \glo{Python:} Linguaggio consigliato per lo sviluppo della Business Logic;
+\item \glo{GraphQL:} linguaggio di interrogazione lato server per interfacce di programmazione delle applicazioni (API);
 \end{itemize}
