Fix stile generale pre RR

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
@@ -24,7 +24,7 @@ risposte agli obblighi normativi:
 \end{itemize}
 
 \subsection{Glossario}
-Nel documento sono presenti alcuni termini marcati in corsivo con una \emph{G} a pedice; tale notazione sta ad indicare che \'{e} presenta la definizione di tali termini \'{e} presente nel documento \G{} allegato.
+Nel documento sono presenti alcuni termini marcati in corsivo con una \emph{G} a pedice; tale notazione sta ad indicare che \'{e} presenta la definizione di tali termini \'{e} presente nel documento \Gv{} allegato.
 
 \subsection{Riferimenti}
 \begin{itemize}
