--- a/DocumentiEsterni/Glossario/src/Comandi.tex
+++ b/DocumentiEsterni/Glossario/src/Comandi.tex
@@ -1,20 +1,18 @@
 \newcommand{\Titolo}{Glossario}
 
-\newcommand{\Prodotto}{TODO}
-
-\newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{TODO \newline TODO \newline TODO}
-\newcommand{\Verificatori}{TODO \newline TODO}
+\newcommand{\Approvatore}{Elvis Murtezan}
+\newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto \newline Abdelwahad Kandoul}
+\newcommand{\Verificatori}{Filippo Pinton}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{TODO.}
+\newcommand{\DescrizioneDoc}{Glossario dei termini ambigui o tecnici utilizzati nei documenti allegati.}
 
 \newcommand{\TermineGlossario}[1]{\textbf{#1}\\}
 \newcommand{\DefinizioneGlossario}[1]{#1\\ \\}
