--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -17,7 +17,7 @@ Gruppo \Gruppo{}}
 
 \newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{Attività di pianificazione per la realizzazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}}
+\newcommand{\DescrizioneDoc}{Attività di pianificazione per la realizzazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}.}
 \newcommand{\AD}{Andrea De Tomasi}
 \newcommand{\AT}{Alessio Trevisan}
 \newcommand{\AW}{Abdelwahad Kandoul}
