--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -39,37 +39,37 @@
 
         0.0.7  & 
         2021-01-03 & 
-        Aggiornato preventivo architettura e preventivo al dettaglio & 
+        Stesura §5.5 &
         Elvis Murtezan  & 
         \responsabile{} \\
 
         0.0.6  & 
         2021-01-02 & 
-        Stesura preventivo analisi e consuntivo & 
+        Stesura §5.1 & 
         Elvis Murtezan  & 
         \responsabile{} \\
 
         0.0.5  & 
         2021-01-02 & 
-        Aggiunta pianificazione & 
+        Stesura §4 & 
         Giovanni Grigoletto & 
         \responsabile{} \\
 
         0.0.4  & 
         2020-12-28 & 
-        Aggiunto organigramma e preventivo parziale & 
+        Stesura §5, §6 & 
         Elvis Murtezan  & 
         \responsabile{} \\
 
         0.0.3  & 
         2020-12-28 & 
-        Aggiunto modello di sviluppo & 
+        Stesura §3 & 
         Giovanni Grigoletto & 
         \responsabile{} \\
         
         0.0.2  & 
         2020-12-26 & 
-        Aggunta introduzione ed analisi dei rischi & 
+        Stesura §1, §2 & 
         Giovanni Grigoletto & 
         \responsabile{} \\
 
