--- a/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
@@ -12,5 +12,5 @@
 
 \newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{Questo documento contiene le strategie volti a garantire processi e prodotti di qualita}
+\newcommand{\DescrizioneDoc}{Questo documento contiene le strategie volti a garantire processi e prodotti di qualit\`{a}.}
 
