--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -2,7 +2,7 @@
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
     \renewcommand{\arraystretch}{1.5}
     \centering
-    \begin{longtable}{ c c  C{4cm}  c  c }
+    \begin{longtable}{ c c  C{3.5cm}  C{4cm}  c }
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{
         \textbf{Versione}}     & \textcolor{\secondaryColor}{\textbf{Data}}       & \textcolor{\secondaryColor}
@@ -14,13 +14,12 @@
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
         1.0.0                   &2021-01-10                                        & Approvazione                                   &Giovanni Grigoletto & \responsabile{}\\
-        0.2.0                  & 2021-01-06                                       & Verifica documento                            &Alessio Trevisan &\verificatore{}\\
-        0.1.0                  & 2021-01-05                                       & Verifica documento                            &Filippo Pinton &\verificatore{}\\
-        0.0.5                  & 2021-01-05                                       & Stesura Appendice §C                         & Abdelwahad kandoul & \redattore{} \\
-        0.0.4                  & 2021-01-04                                       & Stesura Appendice §A e §B                          & Abdelwahad kandoul & \redattore{} \\
-        0.0.3                  & 2021-01-03                                       & Stesura §3                            & Abdelwahad kandoul & \redattore{} \\
-        0.0.2                  & 2021-01-02                                       & Stesura §2                              & Andrea De Tomasi & \redattore{} \\
-        0.0.1                  & 2021-01-01                                       & Stesura §1                            & Abdelwahad kandoul & \redattore{} \\
+        0.1.0                  & 2021-01-05                                       & Verifica documento                            & Alessio Trevisan, Filippo Pinton &\verificatore{}\\
+        0.0.5                  & 2021-01-05                                       & Stesura Appendice §C                         & Abdelwahad kandoul & \verificatore{} \\
+        0.0.4                  & 2021-01-04                                       & Stesura Appendice §A e §B                          & Abdelwahad kandoul & \verificatore{} \\
+        0.0.3                  & 2021-01-03                                       & Stesura §3                            & Abdelwahad kandoul & \verificatore{} \\
+        0.0.2                  & 2021-01-02                                       & Stesura §2                              & Andrea De Tomasi & \verificatore{} \\
+        0.0.1                  & 2021-01-01                                       & Stesura §1                            & Abdelwahad kandoul & \verificatore{} \\
     
     
     \end{longtable}
