--- a/DocumentiInterni/NormeDiProgetto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/main.tex
@@ -18,18 +18,18 @@
 \tableofcontents
 
 \newpage
+\listoffigures
+
+\newpage
 \section{Introduzione}\label{sec:introduzione}
 \input{./src/Introduzione/main.tex}
 
-\newpage
 \section{Processi primari}\label{sec:processi-primari}
 \input{./src/ProcessiPrimari/main.tex}
 
-\newpage
 \section{Processi di supporto}\label{sec:processi-di-supporto}
 \input{src/ProcessiDiSupporto/main.tex}
 
-\newpage
 \section{Processi organizzativi}\label{sec:processi-organizzativi}
 \input{src/ProcessiOrganizzativi/main.tex}
 
