--- a/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
@@ -11,21 +11,21 @@ installata in uno smartphone \glo{Android} e dovrà poter essere utilizzata impi
 dei tag \glo{RFID}.
 
 \subsection{Glossario}
-Al fine di evitare ambiguità fra i termini, e per avere chiare fra tutti gli stakeholder le terminologie utilizzate per la realizzazione del presente documento, il gruppo \Gruppo{} ha redatto un documento denominato \Gv.
+Al fine di evitare ambiguità fra i termini, e per avere chiare fra tutti gli stakeholder le terminologie utilizzate per la realizzazione del presente documento, il gruppo \Gruppo{} ha redatto un documento denominato \Gv{}.
 In tale documento, sono presenti tutti i termini tecnici, ambigui, specifici del progetto e scelti dai membri del gruppo con le loro relative definizioni.
-Un termine presente nel \Gv e utilizzato in questo documento viene indicato con un apice \ap{G} alla fine della parola.
+Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato con un pedice \glo{} alla fine della parola.
 
 \subsection{Riferimenti} 
 \subsubsection{Normativi}
 \begin{itemize}
-	\item \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf}
-	\item \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
+	\item \textbf{Capitolato d'appalto C1:} \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf}
+	\item \textbf{ISO\_1227--1995:} \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
 \end{itemize}
 
 \subsubsection{Informativi}
 \begin{itemize}
-	\item \url{https://www.latex-project.org/help/documentation/}
-	\item \url{https://www.atlassian.com/it/software/jira}
-	\item \url{https://github.com/}
-	\item \url{https://www.gitkraken.com/}
+	\item \textbf{\LaTeX:} \url{https://www.latex-project.org/help/documentation/}
+	\item \textbf{Jira:} \url{https://www.atlassian.com/it/software/jira}
+	\item \textbf{GitHub:} \url{https://github.com/}
+	\item \textbf{GitKraken:} \url{https://www.gitkraken.com/}
 \end{itemize}
