--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/scopo.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/scopo.tex
@@ -3,7 +3,7 @@ Gli analisti del gruppo \Gruppo{} hanno il compito di individuare, elencare e de
 \begin{itemize}
     \item una descrizione generale del prodotto;
     \item tracciamento dei requisiti individuati;
-    \item casi d'uso rappresentati tramite diagrammi UML;
+        \item casi d'uso rappresentati tramite diagrammi \glo{UML};
     \item eventuali argomentazioni per i progettisti;
     \item funzionalit\`{a} e requisiti concordati con il proponente.
 \end{itemize}
