--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -93,7 +93,7 @@
 % variabili - documenti
 \newcommand{\VersioneDiConsegna}{v1.0.0}
 \newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.1.0.0}}
-\newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
+\newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0}}
 \newcommand{\VIv}{\emph{Verbale interno\_v.1.0.0}}
 \newcommand{\NdPv}{\emph{Norme di progetto\_v.1.0.0}}
 \newcommand{\PdPv}{\emph{Piano di progetto\_v.1.0.0}}
