--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
@@ -1,12 +1,12 @@
 \newcommand{\Titolo}{Analisi Dei Requisiti}
 
-\newcommand{\Approvatore}{TODO}
+\newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Verificatori}{Andrea De Tomasi \newline Giovanni Grigoretto \newline Elvis Murtezan}
 \newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Imola informatica \newline Sweleven }
 
