--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
@@ -1,21 +1,25 @@
 
 {
-    \rowcolors{2}{\evenRowColor}{\oddRowColor}
-    \renewcommand{\arraystretch}{1.5}
-    \centering
-    \begin{longtable}{ c c  C{4cm}  c  c }
-        \rowcolor{\primaryColor}
-        \textcolor{\secondaryColor}{
-        \textbf{Versione}}     & \textcolor{\secondaryColor}{\textbf{Data}}       & \textcolor{\secondaryColor}
-        {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                          \\
+\rowcolors{2}{\evenRowColor}{\oddRowColor}
+\renewcommand{\arraystretch}{1.5}
+\centering
+\begin{longtable}{ c c  C{3.5cm}  C{4cm}  c }
+    \rowcolor{\primaryColor}
+    \textcolor{\secondaryColor}{
+    \textbf{Versione}}     & \textcolor{\secondaryColor}{\textbf{Data}}       & \textcolor{\secondaryColor}
+    {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                                                                         \\
 
-        % usare \verificatore per indicare verificatore
-        % usare \redattore per indicare redatore
-        % usare \responsabile per indicare responsabile
+    % usare \verificatore per indicare verificatore
+    % usare \redattore per indicare redatore
+    % usare \responsabile per indicare responsabile
 
-        %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
-    \end{longtable}
+    %		L'ultimo evento deve essere sempre all'inizio della tabella
+    1.0.0                  & 2021-01-05                                       & Responsabile                                & Elvis Murtezan                                      & \responsabile{} \\
+
+    0.1.0                  & 2021-01-04                                       & Verifica                                    & Elvis Murtezan, Giovanni Grigoletto                 & \verificatore{} \\
+
+    0.0.2                  & 2021-01-3                                        & stesura §4, §5                              & Alessio Trevisan, Edoardo Caregnato, Filippo Pinton & \analista{}    \\
+
+    0.0.1                  & 2020-12-23                                       & stesura §1, §2, §3                          & Filippo Pinton                                      & \analista{}    \\
+\end{longtable}
 }
