--- a/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/T.tex
@@ -1,6 +1,6 @@
 \section{T}
 \TermineGlossario{Technology Baseline}
-\DefinizioneGlossario{Documentazione che dimostra l'adeguatezza dell'architettura tramite un Proof of Concept (PoC) che rappresenta la baseline per lo sviluppo. La Technology baseline include le tecnologie, i framework, i diagrammi UML e le librerie utilizzate nel Proof of Concept.}
+\DefinizioneGlossario{Documentazione che dimostra l'adeguatezza dell'architettura tramite un Proof of Concept (PoC) che rappresenta la baseline per lo sviluppo. La Technology baseline include le tecnologie, i framework, i diagrammi \glo{UML} e le librerie utilizzate nel Proof of Concept.}
 
 \TermineGlossario{Telegram}
 \DefinizioneGlossario{Servizio di messaggistica istantanea, usato principalmente su smartphone ma disponibile anche per PC, molto simile secondo certi punti di vista a Slack o Discord per la sua possibilità di avere più canali. Viene usato dal gruppo per comunicare saltuariamente con il proponente, nei soli casi in cui non risponda alle e-mail.}
