--- a/DocumentiEsterni/Glossario/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Glossario/src/RegistroModifiche.tex
@@ -13,8 +13,14 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        0.0.1                  & 2020-12-01                                       & Stesura Iniziale del documento              & Elvis Murtezan & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
+        1.0.0                  & 2021-01-10                                       & Approvazione              & Elvis Murtezan& \responsabile{} \\
+
+        0.1.0                  & 2021-01-5                                       & Verifica             & Filippo Pinton & \verificatore{} \\
+
+        0.0.3                  & 2020-12-13                                       & Stesura §21-§25              & Abdelwahad Kandoul & \analista{} \\
+        
+        0.0.2                  & 2020-12-12                                       & Stesura §16-§20              & Giovanni Grigoletto & \analista{} \\
+
+        0.0.1                  & 2020-12-01                                       & Stesura §1-§15              & Elvis Murtezan & \analista{} \\
     \end{longtable}
 }
