--- a/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
@@ -13,7 +13,7 @@ Infine, per ogni capitolato vengono esposte le motivazioni e le ragioni per cui 
 \subsection{Glossario}
 Al fine di evitare ambiguità tra stakeholder, il gruppo Sweleven ha redatto un documento denominato \Glossariov{} che definisce la terminologia utilizzata per la realizzazione del presente documento.
 In tale documento, sono presenti tutti i termini tecnici, ambigui, specifici del progetto con le loro relative definizioni.
-Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato con un apice G alla fine della parola.
+Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato con un pedice \glo{} alla fine della parola.
 \subsection{Riferimenti}
 
 \subsubsection{Normativi}
