--- a/DocumentiInterni/Verbali/Verbale_2020_12_11/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_2020_12_11/src/Comandi.tex
@@ -6,7 +6,7 @@
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
